--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "classnames": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^3.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
